<resources>
    <string name="app_name">UNADroid</string>
    <string name="app_name_upper">UNADROID</string>
    <string name="app_name_subtitle">Guia de programación</string>
    <string name="loader_footer_text">DIPLOMADO PROFUNDIZACIÓN EN COMPUTACIÓN MÓVIL</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="string_void">Void</string>
    <string name="title_activity_main2">UNADroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UNADROID</string>
    <string name="nav_header_subtitle">Curso: Computación Móvil</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="campus_url">https://www.unad.edu.co/</string>
    <string name="iam_email">Correo electrónico</string>
    <string name="iam_password">Contraseña</string>
    <string name="iam_login">Ingrese</string>
    <string name="iam_register">Regístrese</string>
    <string name="iam_first_name">Nombres</string>
    <string name="iam_last_name">Apellidos</string>
    <string name="iam_send">Enviar</string>
    <string name="connection_error">Sin acceso a Internet</string>
    <string name="try_again">Reintentar</string>
    <string name="unit_list_title">Lista de Unidades</string>
    <string name="topics_list_title">Temáticas de la Unidad</string>
    <string name="resource_list_title">Lista de recursos</string>
    <string name="quiz_list_title">Lista de Evaluaciones</string>
    <string name="evaluation_description">Esta evaluación permite poner a prueba los conocimientos adquiridos en la unidad seleccionada. Te recomendamos leer la documentación antes de continuar.\n\nSe presenta un conjunto de preguntas y tienes tres intentos para completarlas de manera correcta. </string>
    <string name="start_evaluation">Iniciar evaluación!</string>
    <string name="evaluation_next_quest">Siguiente</string>
    <string name="evaluation_finish">Finalizar</string>
    <string name="resource_list_return">Regresar</string>
    <string name="iam_password_repeat">Repetir contraseña</string>
    <string name="iam_title_edit_profile">Editar Perfil</string>
    <string name="iam_title_edit_password">Cambiar contraseña</string>
    <string name="iam_registration_error">Ha ocurrido un error que no permite el registro. Intente de nuevo. Si el problema persiste, contacte a soporte</string>
    <string name="iam_login_error">Ha ocurrido un error que no permite el ingreso. Intente de nuevo. Si el problema persiste, contacte a soporte</string>
    <string name="iam_profile_error">Ha ocurrido un error que no permite actualizar el perfil. Intente de nuevo. Si el problema persiste, contacte a soporte</string>
    <string name="validate_password_required">Debe ingresar una contraseña</string>
    <string name="validate_password_repeat_required">Las contraseñas no coinciden</string>
    <string name="validate_email_required">Debe ingresar un correo</string>
    <string name="validate_invalid_email">Debe ingresar una dirección de correo electrónico válido</string>
    <string name="validate_firstname_required">Debe ingresar su(s) nombre(s)</string>
    <string name="validate_lastname_required">Debe ingresar su(s) apellido(s)</string>
    <string name="validate_password_policy">Por favor digite su contraseña. Debe tener una letra minúscula, una letra mayúscula, un dígito y ser mayor o igual a 8 caracteres</string>
    <string name="iam_button_recovery">Recuperar</string>
    <string name="iam_recovery_error">Ha ocurrido un error que no permite recuperar el acceso. Intente de nuevo. Si el problema persiste, contacte a soporte</string>
    <string name="iam_recover_message">Te hemos enviado un correo electrónico a la dirección registrada con las instrucciones para recuperar el acceso</string>
    <string name="about_activity_title">Acerca de </string>
    <string name="txt_about_objetive">UnaDroid se diseñó y desarrollo con el objetivo de apoyar el aprendizaje en el desarrollo de aplicaciones móviles para Android, a través de la formación que brinda el Diplomado de Profundización en Computación Móvil de la Universidad Nacional Abierta y a Distancia UNAD</string>
    <string name="about_participants_title">Participantes</string>
    <string name="title_activity_evaluation">EvaluationActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="course_description">Es un curso académico ofertado a los estudiantes de los programas de Ingeniería de Sistemas, Ingeniería Electrónica e Ingeniería de las Telecomunicaciones de la UNAD de Colombia como alternativa de grado. Este curso se estructura bajo los principios académicos y pedagógicos del sistema de educación abierto y a distancia, que promueve la Universidad a través de su Proyecto Académico Pedagógico Solidario. </string>
</resources>
