<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/evals_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="142dp"
            android:layout_height="83dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:contentDescription="@android:string/no"
            android:src="@drawable/quiz_icon" />

        <TextView
            android:id="@+id/start_eval_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center_horizontal"
            android:text="@string/quiz_list_title"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:text="@string/evaluation_description"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="177dp"
            android:layout_height="59dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="startEvaluation"
            android:text="@string/start_evaluation"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>